# Change Log
All notable changes to this project will be documented in this file.
The format is based on [Keep a Changelog](http://keepachangelog.com/) 
and this project adheres to [Semantic Versioning](http://semver.org/).
## [0.1.8] 2017 Mar 31
#### change
- use -O3 now sim-only can finish 100 steps in 33.6s
- add error checking for adios init
## [0.1.7] 2017 Mar 30
#### done
- moved to bridges, correctly run with seprated nodes 
- tested 8v4
### to do
- test 48v24

## [0.1.6] 2017 Mar 29
#### added
- now run in separate nodes, but PMI erroj
## [0.1.5] 2017 mar 28
#### issues
- run job, but output not output to corresponding folder
kjjjj

## [0.1.4] 2017 Mar 27
#### added
- timer added in the begining of first simulation and at the end of last step
of analysis
- starting experiment in comet of staging method
- now different configurations are generated in different builds
- now all scripts are in scripts/(simulation_only version added)


## [0.1.3] 2017 mar 26
#### modified
- save errno of streaming read, so receiver will stop correctly
- add parameter 'mode' to insert_into_adios(), for keep, "a"(append) mode will
be used(first iteration use "w" to creat the file)
be used

#### added
- xml files are splited for different transport methods in xmls dir
- run_lbm will select different xml based on preprocessor

## [0.1.2] 2017 mar 25
#### fixed
mpiio need to use scratch path explicitly
#### Notes:
- for mppio:
	1. use scratch path explicitly for adios variable
	2. buffer size in xml should be larger than groupsize
	3. for a application with both MPI-io and staging read, init_read_method
	first than init_adios
#### changed
add kep using mpiio, now new ads_adaptor.c/h is created
## [0.1.1] 2017 Mar 24
#### Notes
- most data generated by lbm is 0
- testes 1 proc, correct
#### ADD
- add analysis component

## [0.1.0] 2017 Mar 23
#### Changed
- removed blocks, now each process need to prepare contiguous buffer for adios
#### To do