@@ -26,21 +26,22 @@ find_library(ADIOS adios ${ADIOS_DIR}/lib)
 
 add_executable(run_lbm run_lbm.c adios_adaptor.c utility.c)
 add_executable(adios_read_global adios_staging_read.c run_analysis.c adios_adaptor.c utility.c)
+add_executable(mpiio_read adios_mpiio_read.c run_analysis.c adios_adaptor.c utility.c)
 #add_executable(adios_read_global adios_mpiio_read.c run_analysis.c adios_adaptor.c)
 # add_executable(adios_write_global adios_write_global.c)
-target_link_libraries(run_lbm ${ADIOS} ${DSPACES} ${DSCOMMON} ${DART})
-target_link_libraries(adios_read_global ${ADIOS} ${DSPACES} ${DSCOMMON} ${DART})
-#target_link_libraries(adios_write_global ${ADIOS} ${DSPACES} ${DSCOMMON} ${DART} )
-target_link_libraries(run_lbm ${MPI_LIBRARIES} pthread rt rdmacm ibverbs m)
-target_link_libraries(adios_read_global ${MPI_LIBRARIES} pthread rt rdmacm ibverbs m)
-#add_subdirectory(manual)
 
-if(MPI_COMPILE_FLAGS)
-    set_target_properties(run_lbm PROPERTIES COMPILE_FLAGS "${MPI_C_COMPILE_FLAGS}")
-    set_target_properties(adios_read_global PROPERTIES COMPILE_FLAGS "${MPI_C_COMPILE_FLAGS}")
-endif()
+SET(myTARGET run_lbm adios_read_global mpiio_read)
+foreach(item ${myTARGET})
+    target_link_libraries(${item} ${ADIOS} ${DSPACES} ${DSCOMMON} ${DART})
+    target_link_libraries(${item} ${MPI_LIBRARIES} pthread rt rdmacm ibverbs m)
 
-if(MPI_LINK_FLAGS)
-    set_target_properties(run_lbm PROPERTIES LINK_FLAGS "${MPI_C_LINK_FLAGS}")
-    set_target_properties(adios_read_global PROPERTIES LINK_FLAGS "${MPI_C_LINK_FLAGS}")
-endif()
+    if(MPI_COMPILE_FLAGS)
+        set_target_properties(${item} PROPERTIES COMPILE_FLAGS "${MPI_C_COMPILE_FLAGS}")
+    endif()
+
+    if(MPI_LINK_FLAGS)
+        set_target_properties(${item} PROPERTIES LINK_FLAGS "${MPI_C_LINK_FLAGS}")
+    endif()
+endforeach(item)
+
+
