@@ -1,6 +1,6 @@
 #include "adios_adaptor.h"
 
-void insert_into_adios(char * file_path, char *var_name, int n, int size_one, double * buf, const char* mode,  MPI_Comm *pcomm){
+void insert_into_adios(char * file_path, char *var_name,int timestep, int n, int size_one, double * buf, const char* mode,  MPI_Comm *pcomm){
     char        filename [256];
     int         rank, size;
     int         NX;
@@ -25,7 +25,14 @@ void insert_into_adios(char * file_path, char *var_name, int n, int size_one, do
     int lb;
     lb = rank*n;
 
-    sprintf(filename, "%s/%s.bp", file_path, var_name);
+    if(timestep <0){
+        sprintf(filename, "%s/%s.bp", file_path, var_name);
+    }
+    else{
+        sprintf(filename, "%s/%s_%d.bp", file_path, var_name, timestep);
+    }
+
+
 
     //printf("rank %d: start to write\n", rank);
     
